--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               Vikram Bodicherla
+tagline:             Father of 2; Android Lead for Yahoo Finance
+url:                 https://www.linkedin.com/in/vikrambodicherla
 paginate:            1
-baseurl:             ""
+baseurl:             https://vikrambodicherla.github.io/
 
 # Assets
 #
@@ -17,14 +17,14 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Vikram Bodicherla
+  url:               https://www.linkedin.com/in/vikrambodicherla
+  email:             vikram.bodicherla@gmail.com
 
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/poole/poole
+  repo:              https://github.com/vikrambodicherla
 
 # Gems
 gems:
