--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               Vikram Bodicherla
-tagline:             Father of 2; Android Lead for Yahoo Finance
+tagline:             Father of 2; Engg. Manager for Yahoo Finance
 url:                 https://www.linkedin.com/in/vikrambodicherla
 paginate:            1
 baseurl:             ""
